--- a/css/response_1899.css
+++ b/css/response_1899.css
@@ -233,6 +233,25 @@
     }
 
 
+    .text_block ul li
+    {
+        padding-left: 20px;
+    }
+
+    .text_block ul li + li
+    {
+        margin-top: 12px;
+    }
+
+    .text_block ul li:before
+    {
+        top: 9px;
+
+        width: 10px;
+        height: 10px;
+    }
+
+
 
     /*-------------------
         First section
@@ -1504,6 +1523,90 @@
     .proven_safety .img
     {
         width: 187px;
+    }
+
+
+
+    /*--------------
+        Programs
+    --------------*/
+    .programs
+    {
+        margin-bottom: 80px;
+    }
+
+
+    .programs .program
+    {
+        padding: 54px 44px;
+
+        border-radius: 25px;
+    }
+
+
+    .programs .program .logo
+    {
+        width: 160px;
+    }
+
+
+
+    .programs .program .data
+    {
+        width: calc(100% - 200px);
+    }
+
+
+    .programs .program .program_name
+    {
+        font-size: 28px;
+
+        margin-bottom: 36px;
+    }
+
+
+    .programs .program .results
+    {
+        margin-top: 36px;
+    }
+
+    .programs .program .results .title
+    {
+        font-size: 24px;
+        line-height: 28px;
+
+        margin-bottom: 28px;
+    }
+
+
+    .programs .program .download
+    {
+        margin-top: 36px;
+    }
+
+
+    .programs .program .download a
+    {
+        font-size: 24px;
+        line-height: 28px;
+
+        padding: 24px 35px;
+
+        border-width: 2px;
+        border-radius: 25px;
+    }
+
+
+    .programs .program .download .icon
+    {
+        width: 41px;
+        height: 53px;
+    }
+
+
+    .programs .program .download span
+    {
+        width: calc(100% - 71px);
     }
 
 
